--- a/src/main/java/com/saluddigital/cerroverde/view/RegistroPaciente.form
+++ b/src/main/java/com/saluddigital/cerroverde/view/RegistroPaciente.form
@@ -492,6 +492,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Crear Paciente"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCrearPacienteActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLimpiar">
       <Properties>
